# muxa

./: Cargo.toml  readme.md
migrations/: sessions.sql
src/: config.rs  consts.rs  cookies.rs  css.rs  errors.rs  helpers.rs  html.rs  image_compression.rs  lib.rs  macro_helpers.rs  router.rs  sessions.rs  theme.rs  tracing.rs  validation.rs  zip.rs
src/extractors/: multipart.rs
src/html/: components.rs  mod.rs
src/tests/: helpers.rs
