[package]
name = "muxa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Defines a feature named `webp` that does not enable any other features.
default = ["sqlite"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]

[dependencies]
async-session = "3.0.0"
axum = { version = "0.5.1", features = ["headers", "multipart"] }
backtrace = "0.3.64"
bytes = "1.1.0"
chrono = "0.4.19"
futures = "0.3.21"
http = "0.2.7"
hyper = "0.14.18"
image = "0.24.2"
maud = { version = "0.23.0" }
paste = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["io"] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
turbojpeg = {version = "0.4", features = ["image"]}
uuid = { version = "0.8.2", features = ["serde", "v4"] }
validator = { version = "0.14.0", features = ["derive"] }
zip = "0.6.2"

[dev-dependencies]
serial_test = "0.6.0"
