[package]
name = "muxa"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite", "zephyr"]

mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]

img_processing = ["dep:turbojpeg", "dep:image"]
zip = ["dep:zip"]
zephyr = ["maud/zephyr"]

[dependencies]
async-session = "3.0.0"
axum = { version = "0.6.0-rc.1", features = ["headers", "multipart"] }
axum-extra = { version = "0.4.0-rc.1", features = ["typed-routing"] }
backtrace = "0.3.64"
bytes = "1.1.0"
chrono = "0.4.19"
futures = "0.3.21"
http = "0.2.7"
hyper = "0.14.18"

maud = { git = "https://github.com/annieversary/maud", rev = "e39cef7b14485d05146ea1e3da1d4b3c4e21aa9e" }

paste = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["io"] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["fs", "trace"] }
tracing = "0.1.35"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
validator = { version = "0.14.0", features = ["derive"] }

turbojpeg = { version = "0.4", features = ["image"], optional = true }
image = { version = "0.24.2", optional = true }
zip = { version = "0.6.2", optional = true }
const-random = "0.1.13"

[dev-dependencies]
serial_test = "0.6.0"
